--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
@@ -12,7 +12,7 @@
 	<!--[if lt IE 9]><script src="../js/html5.js"></script><![endif]-->
 	<link rel="stylesheet" type="text/css" href="../css/themeProy.css">
 	
-	<script src="../js/jquery.min.js"></script>
+	<script src="../js/Plugins/jquery.min.js"></script>
 </head>
 
 <body style="background-color: whitesmoke;">
@@ -52,7 +52,7 @@
 		<ul class="btn-group">
 			<button onclick="buscarContenidos();" class="btn btn-primary" style="margin-top: initial;">
 				<span class="glyphicon glyphicon-search"></span> Buscar</button>
-			<button class="btn btn-primary dropdown-toggle"	type="button" onclick="verModales('configurarBusqueda');"><span class="glyphicon glyphicon-cog"></span></button>
+			<button class="btn btn-primary dropdown-toggle"	type="button" onclick="verModales('configurarBusqueda');/*mostrarElemento('configurarBusqueda',true)*/"><span class="glyphicon glyphicon-cog"></span></button>
 		</ul>
 	</ul>
     <ul class="nav navbar-nav navbar-right" id="Login-Registro-Div">
@@ -63,14 +63,16 @@
 		</ul>
 		<button class="btn btn-primary barraBusquedaHome" onclick="mostrarElemento('loginUsuario',true)">Login</button>
     </ul>
-	<ul class="col-md-2 pull-right" id="Nick-Logout-Div" hidden>
-		<a href="#" class="nick">nick</a>
-		<a href="#" onclick="logoutUsuario()">(Logout)</a>
+	<ul class="nav navbar-nav navbar-right" id="Nick-Logout-Div" style="display: none;margin-right: initial;margin-top: 0.7em;" hidden>
+        <a class="nick" role="button" href="#"><i class="glyphicon glyphicon-user"></i> nick </a>
+		<a href="#" onclick="logoutUsuario()"><i class="glyphicon glyphicon-lock"></i> Logout</a>
 	</ul>
 </nav>
 
+<div class="col-md-12" style="height:100px;"></div>
+
 <!-- CONTENIDO / CUERPO DE LA VISTA -->
-	<div class="col-md-16" style="min-height: 395px;width: 100%;">
+	<div id="con-tenedor" class="col-md-16 container" style="min-height: 395px;width: 100%;">
 		<div id="MP_Content" class="col-md-4" style="text-align: center;">
 		</div>
 		<div id="MP_Canvas" class="col-md-8">
@@ -125,121 +127,15 @@
                 <th>Calificacion</th>
             </tr>
         </thead>
-        <tbody>
-            <tr href="views/content.html?id=1" id="datosContenido1">
-                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>Nullam sapien massa, aliquam in cursus ut, ullamcorper in tortor. Aliquam
-                    mauris arcu, tristique a lobortis vitae, condimentum feugiat justo.</td>
-                <td>4.0</td>
-                <td>2/5</td>
-            </tr>
-            <tr id="datosContenido2">
-                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>Gratis</td>
-                <td>4/5</td>
-            </tr>
-            <tr id="datosContenido3">
-				<td><img src="//placehold.it/50x50" class="img-responsive"></td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-            <tr id="datosContenido4">
-                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-            <tr id="datosContenido5">
-                <td>
-                    <img src="//placehold.it/50x50" class="img-responsive">
-                </td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-            <tr id="datosContenido6" onclick="verContenido()">
-                <td>
-                    <img src="//placehold.it/50x50" class="img-responsive">
-                </td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr href="views/content.html?id=1" id="datosContenido7" onclick="verContenido()">
-                <td>
-                    <img src="//placehold.it/50x50" class="img-responsive">
-                </td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>4.0</td>
-                <td>2/5</td>
-            </tr>
-            <tr id="datosContenido6" onclick="verContenido()">
-                <td>
-                    <img src="//placehold.it/50x50" class="img-responsive">
-                </td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>Gratis</td>
-                <td>4/5</td>
-            </tr>
-            <tr id="datosContenido6" onclick="verContenido()">
-                <td>
-                    <img src="//placehold.it/50x50" class="img-responsive">
-                </td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-            <tr id="datosContenido6" onclick="verContenido()">
-                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-            <tr id="datosContenido6" onclick="verContenido()">
-                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-        </tbody>
+        <tbody id="cuerpoBusqueda"></tbody>
     </table>
     <div class="pagination pagination-mini" style="display: initial;">
-        <ul class="pager">
-            <li><a href="#">1</a>
-            </li>
-            <li><a href="#">2</a>
-            </li>
-            <li><a href="#">3</a>
-            </li>
-        </ul>
+        <ul class="pager" id="paginadoBusqueda"></ul>
     </div>
 </div>
+
 </body>
+
 
 <!-- CONFIGURAR BUSQUEDA -->
 <div id="configurarBusqueda" class="modal fade" tabindex="-1" role="dialog">
@@ -369,13 +265,13 @@
 	</div>
 </div>
 
-<script src="../js/jquery-ui.js"></script>
+<script src="../js/Plugins/jquery-ui.js"></script>
 <script src="../js/globalesProyecto.js"></script>
 <script src="../js/Prototipos.js"></script>
 <script src="../js/Objetos.js"></script>
-<script src="../js/holder.js"></script>
+<script src="../js/Plugins/holder.js"></script>
 <script src="../js/blockUI.js"></script>
-<script src="../js/bootstrap.js"></script>
+<script src="../js/Plugins/bootstrap.js"></script>
 <script src="../js/LlamadasAjax.js"></script>
 <script src="../js/getSet.js"></script>
 <script src="../js/eventos.js"></script>
